# rust-simple-benchmarker

./: Cargo.toml  LICENSE  config.json
src/: config.rs  main.rs  observation_logger.rs  request_generator.rs  runner.rs  server.rs  termination.rs
