[package]
name = "rust-simple-benchmarker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.16"
thiserror = "1.0.26"
clap = "3.0.0-beta.5"
toml = "0.5.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
bytes = "1.1.0"